<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="@dimen/_360sdp"
            android:layout_height="@dimen/_36sdp"
            android:importantForAccessibility="no"
            android:src="@drawable/curtains_2"
            app:layout_constraintHeight_percent="1"
            app:layout_constraintWidth_percent="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iv_card_1.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_160sdp"
            android:layout_marginTop="0dp"
            android:importantForAccessibility="no"
            android:src="@drawable/bg_card_1"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toTopOf="@id/guideline5" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_2sdp"
            android:importantForAccessibility="no"
            android:src="@drawable/logo_pb"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toTopOf="@id/guideline5" />

        <ImageView
            android:id="@+id/iv_card_1.2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:importantForAccessibility="no"
            android:src="@drawable/bg_card_1"
            app:layout_constraintBottom_toTopOf="@id/guideline6"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/iv_card_1.1"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/helvetica"
            android:text="@string/g_welcome"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_card_1.1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_email"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_21sdp"

            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="@id/iv_card_1.2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_email_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/txt_box_white"
                android:fontFamily="@font/helvetica"
                android:gravity="start|center_horizontal"
                android:hint="@string/g_ent_email"
                android:importantForAutofill="no"
                android:singleLine="true"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_21sdp"
            app:endIconMode="password_toggle"

            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/tl_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_password_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/txt_box_white"
                android:fontFamily="@font/helvetica"
                android:gravity="start|center_horizontal"
                android:hint="@string/g_ent_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>




<!--        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica"
            android:gravity="center"
            android:text="@string/g_forgot_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/ed_password_login"
            app:layout_constraintTop_toBottomOf="@+id/ed_password_login"
            android:layout_marginTop="5dp"/>-->

        <TextView
            android:id="@+id/tvDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica"
            android:gravity="center"
            android:text="@string/g_don_t_have_an_account_register"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_login_fragment"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/tl_password" />

        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_login_fragment"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/btn_animated"
            android:fontFamily="@font/helvetica"
            android:text="@string/g_log_in"
            android:textColor="@color/purple"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/guideline5.5"
            app:spinning_bar_color="#FFF" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.12" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.88" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>