<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="@dimen/_360sdp"
            android:layout_height="@dimen/_36sdp"
            android:importantForAccessibility="no"
            android:src="@drawable/curtains_2"
            app:layout_constraintHeight_percent="1"
            app:layout_constraintWidth_percent="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iv_card_1.1_register"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:importantForAccessibility="no"
            android:src="@drawable/bg_card_1"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toTopOf="@id/guideline5" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:importantForAccessibility="no"
            android:src="@drawable/logo_pb"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toTopOf="@id/guideline5"
            app:layout_constraintVertical_bias="0.022" />

        <ImageView
            android:id="@+id/iv_card_1.2_register"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:importantForAccessibility="no"
            android:src="@drawable/bg_card_1"
            app:layout_constraintBottom_toTopOf="@id/guideline6"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/iv_card_1.1_register"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/helvetica"
            android:text="@string/g_register"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_card_1.1_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/helvetica"
            android:text="@string/g_username"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="@id/iv_card_1.2_register" />

        <EditText
            android:id="@+id/ed_username_register"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="12dp"
            android:background="@drawable/txt_box_white"
            android:fontFamily="@font/helvetica"
            android:gravity="center"
            android:importantForAutofill="no"
            android:singleLine="true"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/tv_username" />

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/helvetica"
            android:text="@string/g_contact"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/ed_username_register" />

        <EditText
            android:id="@+id/ed_contact_register"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="10dp"
            android:background="@drawable/txt_box_white"
            android:fontFamily="@font/helvetica"
            android:gravity="center"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline2"

            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/tv_contact"
            tools:layout_editor_absoluteY="319dp"
            android:importantForAutofill="yes" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/helvetica"
            android:text="@string/g_email"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/ed_contact_register" />

        <EditText
            android:id="@+id/ed_email_register"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="10dp"
            android:background="@drawable/txt_box_white"
            android:fontFamily="@font/helvetica"
            android:gravity="center"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline2"

            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            tools:layout_editor_absoluteY="319dp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/helvetica"
            android:text="@string/g_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/ed_email_register" />

        <EditText
            android:id="@+id/ed_password_register"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="10dp"
            android:background="@drawable/txt_box_white"
            android:fontFamily="@font/helvetica"
            android:gravity="center"
            android:singleLine="true"
            android:textStyle="bold"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/guideline2"

            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            tools:layout_editor_absoluteY="319dp"
            android:importantForAutofill="no" />

        <ImageButton
            android:id="@+id/b_visibility_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="#0000"
            android:src="@drawable/ic_visibility_off"

            app:layout_constraintBottom_toBottomOf="@+id/ed_password_register"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@id/ed_password_register"/>

        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_register_fragment"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_animated"
            android:fontFamily="@font/helvetica"
            android:text="@string/g_register"
            android:textColor="@color/purple"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/ed_password_register" />

        <TextView
            android:id="@+id/tvHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/helvetica"
            android:text="@string/g_do_you_have_an_account_log_in"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register_fragment" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.12" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.88" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>